Bug 1778597, append valid extensions only when saving a page, r=Gijs,necko-reviewers, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D159478